meta mask done ❤️

--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>d-identity | Blockchain Voter Verification System</title>
-    <meta name="description" content="India's first blockchain-based voter verification system. Secure, transparent, and fraud-proof digital identity management for democratic participation." />
-    <meta name="author" content="d-identity Team" />
-    <meta name="keywords" content="blockchain, voter verification, India, digital identity, democracy, Aadhaar, zero-knowledge proofs" />
+    <title>VeriSafe | Blockchain Voter Verification System</title>
+    <meta
+      name="description"
+      content="India's first blockchain-based voter verification system. Secure, transparent, and fraud-proof digital identity management for democratic participation."
+    />
+    <meta name="author" content="VeriSafe Team" />
+    <meta
+      name="keywords"
+      content="blockchain, voter verification, India, digital identity, democracy, Aadhaar, zero-knowledge proofs"
+    />
 
-    <meta property="og:title" content="d-identity | Blockchain Voter Verification System" />
-    <meta property="og:description" content="India's first blockchain-based voter verification system. Secure, transparent, and fraud-proof digital identity management for democratic participation." />
+    <meta
+      property="og:title"
+      content="VeriSafe | Blockchain Voter Verification System"
+    />
+    <meta
+      property="og:description"
+      content="India's first blockchain-based voter verification system. Secure, transparent, and fraud-proof digital identity management for democratic participation."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
